--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^5.3.4",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
